// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navigation /> should render component 1`] = `
<nav
  className="sc-htpNat bNntMe"
>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/training"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH jFECxi"
        >
          create
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/exam"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH HIQkW"
        >
          note
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/karutas"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH iUDGrn"
        >
          library_books
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/about"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH ehUhAG"
        >
          settings
        </i>
      </a>
    </div>
  </span>
</nav>
`;

exports[`<Navigation /> should render component when current is exam 1`] = `
<nav
  className="sc-htpNat bNntMe"
>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/training"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH jFECxi"
        >
          create
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/exam"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH jUzqgP"
        >
          note
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/karutas"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH iUDGrn"
        >
          library_books
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/about"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH ehUhAG"
        >
          settings
        </i>
      </a>
    </div>
  </span>
</nav>
`;

exports[`<Navigation /> should render component when current is material 1`] = `
<nav
  className="sc-htpNat bNntMe"
>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/training"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH jFECxi"
        >
          create
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/exam"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH HIQkW"
        >
          note
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/karutas"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH fSUkvT"
        >
          library_books
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/about"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH ehUhAG"
        >
          settings
        </i>
      </a>
    </div>
  </span>
</nav>
`;

exports[`<Navigation /> should render component when current is other 1`] = `
<nav
  className="sc-htpNat bNntMe"
>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/training"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH jFECxi"
        >
          create
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/exam"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH HIQkW"
        >
          note
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/karutas"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH iUDGrn"
        >
          library_books
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/about"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH jrpbIC"
        >
          settings
        </i>
      </a>
    </div>
  </span>
</nav>
`;

exports[`<Navigation /> should render component when current is training 1`] = `
<nav
  className="sc-htpNat bNntMe"
>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/training"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH kMfTtZ"
        >
          create
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/exam"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH HIQkW"
        >
          note
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/karutas"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH iUDGrn"
        >
          library_books
        </i>
      </a>
    </div>
  </span>
  <span
    className="sc-bxivhb geoeNk"
  >
    <div
      className="sc-bdVaJa gNYCTH"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <a
        color="#fff"
        href="/about"
        onClick={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <i
          className="material-icons sc-bwzfXH ehUhAG"
        >
          settings
        </i>
      </a>
    </div>
  </span>
</nav>
`;
